# mlops-spark-operator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  k8s.mk  setup.cfg  spark-app-pi.yaml
charts/: values.yaml
charts/spark-operator/: Chart.yaml  values.yaml
charts/spark-operator/templates/: sa-extra-role-binding.yaml  sa-extra-role.yaml  sa-token.yaml  sa.yaml
charts/templates/: sa-extra-role-binding.yaml
spark_operator/: base_client.py  cli.py  controller.py  helm_client.py  kube_client.py
tests/k8s/: cluster.sh  spark-app-pi.yaml
