[metadata]
name = mlops-spark-operator
description = Neu.ro Spark operator
url = https://github.com/neuro-inc/mlops-spark-operator
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiohttp==3.8.4
    click>=8.0

[options.entry_points]
console_scripts =
    platform-spark = spark_operator.cli:main

[options.extras_require]
dev =
    mypy==1.4.1
    pre-commit==3.3.3
    pytest==7.4.0
    pytest-aiohttp==1.0.4
    pytest-asyncio==0.21.1
    types-PyYAML
    types-Werkzeug
    pytest-cov==4.1.0

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[coverage:run]
branch = True
source = spark_operator

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional=true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true
